v0.4.0/_sources/projections/cyl/cyl_oblique_mercator_1.rst.txt

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "projections/cyl/cyl_oblique_mercator_1.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_projections_cyl_cyl_oblique_mercator_1.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_projections_cyl_cyl_oblique_mercator_1.py:


Oblique Mercator
================

Oblique configurations of the cylinder give rise to the oblique Mercator
projection. It is particularly useful when mapping regions of large lateral
extent in an oblique direction. Both parallels and meridians are complex
curves. The projection was developed in the early 1900s by several workers.

**oa**\|\ **oA**\ *lon0/lat0/azimuth/scale*\[**+v**] or
**Oa**\|\ **OA**\ *lon0/lat0/azimuth/width*\[**+v**]

The projection is set with **o** or **O**. The pole is set in the 
northern hemisphere with **a** or the southern hemisphere 
with **A**. The central meridian is set by *lon0/lat0*. The oblique equator 
is set by *azimuth*. Align the y-axis
with the optional **+v**. The figure size is set with *scale* or *width*.

.. GENERATED FROM PYTHON SOURCE LINES 19-33



.. image:: /projections/cyl/images/sphx_glr_cyl_oblique_mercator_1_001.png
    :alt: cyl oblique mercator 1
    :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 Out:

 .. code-block:: none

    <IPython.core.display.Image object>






|

.. code-block:: default

    import pygmt

    fig = pygmt.Figure()
    # Using the origin and azimuth
    fig.coast(
        projection="Oa-120/25/-30/6c+v",
        # Set bottom left and top right coordinates of the figure with "+r"
        region="-122/35/-107/22+r",
        frame="afg",
        land="gray",
        shorelines="1/thin",
        water="lightblue",
    )
    fig.show()


.. rst-class:: sphx-glr-timing

   **Total running time of the script:** ( 0 minutes  1.032 seconds)


.. _sphx_glr_download_projections_cyl_cyl_oblique_mercator_1.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: cyl_oblique_mercator_1.py <cyl_oblique_mercator_1.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: cyl_oblique_mercator_1.ipynb <cyl_oblique_mercator_1.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
